# texttree

./: CMakeLists.txt  README.md
src/: CMakeLists.txt
src/texttree/: node.cpp  node.hpp  parser.cpp  parser.hpp  tree_builder.cpp  tree_builder.hpp
tests/: CMakeLists.txt  node_test.cpp  parser_test.cpp
